==> STMicroelectronics/STM32CubeC5/examples/ll/tim/output_compare/NUCLEO-C5A3ZG/generated/hal/mx_tim2.c <==
/**
  ******************************************************************************
  * @file           : mx_tim2.c
  * @brief          : Peripheral initialization
  ******************************************************************************
  * @attention
  *
  * Copyright (c) 2026 STMicroelectronics.
  * All rights reserved.
  *
  * This software is licensed under terms that can be found in the mx_stm32c5xx_hal_drivers_license.md file
  * in the same directory as the generated code.
  * If no mx_stm32c5xx_hal_drivers_license.md file comes with this software, it is provided AS-IS.
  *
  ******************************************************************************
  */

/* Includes ------------------------------------------------------------------*/
#include "mx_tim2.h"

/* Private typedef -----------------------------------------------------------*/
/* Private define ------------------------------------------------------------*/
/* Private macro -------------------------------------------------------------*/
/* Private variables ---------------------------------------------------------*/
/* Private functions prototype------------------------------------------------*/
/* Exported variables by reference--------------------------------------------*/

/* Exported function definition ----------------------------------------------*/
/******************************************************************************/
/* Exported functions for TIM2 in LL layer */
/******************************************************************************/

TIM_TypeDef *mx_tim2_init(void)
{
  LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_TIM2);

  /* Timer configuration to reach the output frequency at 1 kHz */
  LL_TIM_SetPrescaler(TIM2, 143);
  /* LL_TIM_SetCounterMode(TIM2, LL_TIM_COUNTERMODE_UP); */ /* Configuration matches register reset state at startup. */
  LL_TIM_SetAutoReload(TIM2, 999);
  /* LL_TIM_SetClockDivision(TIM2, LL_TIM_CLOCKDIVISION_DIV1); */ /* Configuration matches register reset state at startup. */
  /* LL_TIM_SetClockDivision2(TIM2, LL_TIM_CLOCKDIVISION2_DIV1); */ /* Configuration matches register reset state at startup. */
  /* LL_TIM_SetClockSource(TIM2, LL_TIM_CLK_INTERNAL); */ /* Configuration matches register reset state at startup. */

  /* Channel 2 Configuration */
  /* LL_TIM_OC_SetPolarity(TIM2, LL_TIM_CHANNEL_CH2, LL_TIM_OCPOLARITY_HIGH); */ /* Configuration matches register reset state at startup. */

  /* Compare Unit 2 Configuration */
  LL_TIM_OC_SetMode(TIM2, LL_TIM_CHANNEL_CH2, LL_TIM_OCMODE_TOGGLE);
  LL_TIM_OC_SetCompareValue(TIM2, LL_TIM_OC_COMPARE_UNIT_2, 1);
  LL_TIM_OC_EnablePreload(TIM2, LL_TIM_CHANNEL_CH2);

  /* Channel 3 Configuration */
  /* LL_TIM_OC_SetPolarity(TIM2, LL_TIM_CHANNEL_CH3, LL_TIM_OCPOLARITY_HIGH); */ /* Configuration matches register reset state at startup. */

  /* Compare Unit 3 Configuration */
  LL_TIM_OC_SetMode(TIM2, LL_TIM_CHANNEL_CH3, LL_TIM_OCMODE_TOGGLE);
  LL_TIM_OC_SetCompareValue(TIM2, LL_TIM_OC_COMPARE_UNIT_3, 251);
  LL_TIM_OC_EnablePreload(TIM2, LL_TIM_CHANNEL_CH3);

  /* Update Event Management */
  /* LL_TIM_SetUpdateSource(TIM2, LL_TIM_UPDATESOURCE_REGULAR); */ /* Configuration matches register reset state at startup. */
  /* LL_TIM_EnableUpdateEvent(TIM2); */ /* Configuration matches register reset state at startup. */

  /* Master Mode Configuration */

  /* ### TIM2 GPIO Configuration ########################### */

  /* GPIO Clocks activation */
  LL_AHB2_GRP1_EnableClock(LL_AHB2_GRP1_PERIPH_GPIOB);

  /**
    [GPIO Pin] ------> [Signal Name] ------> [Labels]

       PB3     ------>   TIM2_CH2   ------>  DBGIN_SWO
    **/

  /* Configure IO output speed (Low, Medium, High or Very-High) */
  /* LL_GPIO_SetPinSpeed(DBGIN_SWO_PORT, DBGIN_SWO_PIN, LL_GPIO_SPEED_FREQ_VERY_HIGH); */ /* Configuration matches register reset state at startup. */

  /* Configure IO output type (Push-Pull or Open-Drain) */
  /* LL_GPIO_SetPinOutputType(DBGIN_SWO_PORT, DBGIN_SWO_PIN, LL_GPIO_OUTPUT_PUSHPULL); */ /* Configuration matches register reset state at startup. */

  /* Activate the Pull-up, Pull-down resistor, or No pull for the current IO */
  /* LL_GPIO_SetPinPull(DBGIN_SWO_PORT, DBGIN_SWO_PIN, LL_GPIO_PULL_NO); */ /* Configuration matches register reset state at startup. */

  /* Configure the Alternate Function in current IO */
  LL_GPIO_SetAFPin_0_7(DBGIN_SWO_PORT, DBGIN_SWO_PIN, LL_GPIO_AF_1);

  /* Configure IO direction mode (Input, Output, Alternate or Analog) */
  /* LL_GPIO_SetPinMode(DBGIN_SWO_PORT, DBGIN_SWO_PIN, LL_GPIO_MODE_ALTERNATE); */ /* Configuration matches register reset state at startup. */

  /**
    [GPIO Pin] ------> [Signal Name] ------> [Labels]

       PB10    ------>   TIM2_CH3   ------>  PB10
    **/

  /* Configure IO output speed (Low, Medium, High or Very-High) */
  /* LL_GPIO_SetPinSpeed(PB10_PORT, PB10_PIN, LL_GPIO_SPEED_FREQ_LOW); */ /* Configuration matches register reset state at startup. */

  /* Configure IO output type (Push-Pull or Open-Drain) */
  /* LL_GPIO_SetPinOutputType(PB10_PORT, PB10_PIN, LL_GPIO_OUTPUT_PUSHPULL); */ /* Configuration matches register reset state at startup. */

  /* Activate the Pull-up, Pull-down resistor, or No pull for the current IO */
  /* LL_GPIO_SetPinPull(PB10_PORT, PB10_PIN, LL_GPIO_PULL_NO); */ /* Configuration matches register reset state at startup. */

  /* Configure the Alternate Function in current IO */
  LL_GPIO_SetAFPin_8_15(PB10_PORT, PB10_PIN, LL_GPIO_AF_1);

  /* Configure IO direction mode (Input, Output, Alternate or Analog) */
  LL_GPIO_SetPinMode(PB10_PORT, PB10_PIN, LL_GPIO_MODE_ALTERNATE);

  return TIM2;
}

void mx_tim2_deinit(void)
{
  LL_APB1_GRP1_DisableClock(LL_APB1_GRP1_PERIPH_TIM2);

  LL_APB1_GRP1_ForceReset(LL_APB1_GRP1_PERIPH_TIM2);
  LL_APB1_GRP1_ReleaseReset(LL_APB1_GRP1_PERIPH_TIM2);

  /* ### GPIO deinitialization of TIM2: TIM2_CH2 ########################### */

  /* Configure IO in Analog Mode */
  LL_GPIO_SetPinMode(DBGIN_SWO_PORT, DBGIN_SWO_PIN, LL_GPIO_MODE_ANALOG);

  /* Configure the default Alternate Function in current IO */
  LL_GPIO_SetAFPin_0_7(DBGIN_SWO_PORT, DBGIN_SWO_PIN, LL_GPIO_AF_0);

  /* Configure the default value for IO Speed */
  LL_GPIO_SetPinSpeed(DBGIN_SWO_PORT, DBGIN_SWO_PIN, LL_GPIO_SPEED_FREQ_LOW);

  /* Configure the default value IO Output Type */
  LL_GPIO_SetPinOutputType(DBGIN_SWO_PORT, DBGIN_SWO_PIN, LL_GPIO_OUTPUT_PUSHPULL);

  /* Deactivate the Pull-up and Pull-down resistor for the current IO */
  LL_GPIO_SetPinPull(DBGIN_SWO_PORT, DBGIN_SWO_PIN, LL_GPIO_PULL_NO);

  /* Reset the IO output state */
  LL_GPIO_WriteOutputPin(DBGIN_SWO_PORT, DBGIN_SWO_PIN, LL_GPIO_PIN_RESET);

  /* ### GPIO deinitialization of TIM2: TIM2_CH3 ########################### */

  /* Configure IO in Analog Mode */
  LL_GPIO_SetPinMode(PB10_PORT, PB10_PIN, LL_GPIO_MODE_ANALOG);

  /* Configure the default Alternate Function in current IO */
  LL_GPIO_SetAFPin_8_15(PB10_PORT, PB10_PIN, LL_GPIO_AF_0);

  /* Configure the default value for IO Speed */
  LL_GPIO_SetPinSpeed(PB10_PORT, PB10_PIN, LL_GPIO_SPEED_FREQ_LOW);

  /* Configure the default value IO Output Type */
  LL_GPIO_SetPinOutputType(PB10_PORT, PB10_PIN, LL_GPIO_OUTPUT_PUSHPULL);

  /* Deactivate the Pull-up and Pull-down resistor for the current IO */
  LL_GPIO_SetPinPull(PB10_PORT, PB10_PIN, LL_GPIO_PULL_NO);

  /* Reset the IO output state */
  LL_GPIO_WriteOutputPin(PB10_PORT, PB10_PIN, LL_GPIO_PIN_RESET);
}
